fixed white space

--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,8 @@ html, body {
   }
 
 }
+
+.bgColor {
+  background-color: rgb(15, 39, 63);
+}
+
